# 6dof_trajectory_planning

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: controllers.yaml
launch/: bringup.launch.py
rviz/: view.rviz
src/: joint_quintic_traj_node.cpp
urdf/: sixdof_arm.urdf
